--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             
         </div>
     </div>
+    <footer>
+        <p>&copy; 2024 Ritik Raj. All rights reserved.</p>
+      </footer>
     <script src="script.js"></script>
 </body>
 </html>
