--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container"> 
-        <h1>Tic Tae Toe</h1>
+        <h1>Tic Tac Toe</h1>
         <div class="gameboard">
             <div class="cell"></div>
             <div class="cell"></div>
