--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container"> 
-        <h1>Tic Tac Toe</h1>
-        <div class="gameboard">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-        </div>
-        <div class="gameplayers">
-            <div id="player1" class="player">Player 1 : X</div>
-            <div id="player2" class="player">Player 2 : O</div>
-        </div>
-        <button class="restartbtn">Restart</button>
-        <div class="alertbox">
-            
-        </div>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Tic Tac Toe</h1>
+      <div class="gameboard">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+      <button class="restartbtn">Restart</button>
+      <div class="alertbox"></div>
     </div>
     <footer>
-        <p>&copy; 2024 Ritik Raj. All rights reserved.</p>
+        <div class="footer-image humanimg">
+          <img src="human.jpg" alt="Illustration of a human" id="humanimg" />
+        </div>
+        <div class="footer-image machineimg">
+          <img src="robit.jpg" alt="Illustration of a robot" id="machineimg"/>
+        </div>
       </footer>
+      
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
